--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,32 +11,35 @@
         android:orientation="vertical">
         <ImageView
             android:id="@+id/imageView1"
+            android:contentDescription="@string/cat_looking_away"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/Image1" />
+            app:srcCompat="@drawable/image1" />
 
         <ImageView
             android:id="@+id/imageView2"
+            android:contentDescription="@string/cat_looking_at_camera"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/Image2" />
+            app:srcCompat="@drawable/image2" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp"
+        android:rotation="-30"
         android:fontFamily="sans-serif-smallcaps"
         android:padding="20dp"
-        android:rotation="-30"
-        android:text="WORK HUMAN!"
-        android:textColor="@android:color/white"
+        android:text="@string/work_human"
+        android:textColor="@android:color/background_light"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -44,12 +47,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:fontFamily="sans-serif-light"
-        android:textStyle="bold|italic"
         android:padding="20dp"
-        android:textColor="@android:color/white"
-        android:text="I AM WATCHIN' YOU!"
-        android:textSize="16sp" />
+        android:text="@string/watchin_you"
+        android:textColor="@android:color/background_light"
+        android:textSize="16sp"
+        android:textStyle="bold|italic" />
 
 </RelativeLayout>
